used streams to enhance search activity